[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/TitleTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Images/start-card-glow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/options-card-shadow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/wordart/title logo.png" type="Texture" id=4]
[ext_resource path="res://Title/title.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/start-card-shadow.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/options-card-glow.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "LogoBounce"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/MainMenuContainer/PanelContainer/Logo:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/MainMenuContainer/PanelContainer/Logo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/OpenSans-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = SubResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="MainMenuAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "LogoBounce"
anims/LogoBounce = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.709804, 0.709804, 0.709804, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenuContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 980.0
margin_bottom = 1720.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MainMenuContainer"]
margin_right = 980.0
margin_bottom = 720.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="Logo" type="TextureRect" parent="MarginContainer/MainMenuContainer/PanelContainer"]
margin_right = 980.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ButtonsHBox" type="HBoxContainer" parent="MarginContainer/MainMenuContainer"]
margin_top = 770.0
margin_right = 980.0
margin_bottom = 1491.0
size_flags_vertical = 3

[node name="StartButtonCard" type="TextureButton" parent="MarginContainer/MainMenuContainer/ButtonsHBox"]
margin_right = 488.0
margin_bottom = 721.0
size_flags_horizontal = 3
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="OptionsButtonCard" type="TextureButton" parent="MarginContainer/MainMenuContainer/ButtonsHBox"]
margin_left = 492.0
margin_right = 980.0
margin_bottom = 721.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Version Label" type="Label" parent="MarginContainer/MainMenuContainer"]
margin_top = 1541.0
margin_right = 980.0
margin_bottom = 1591.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 4 )
text = "version x.y.z"
align = 1

[node name="AuthorRichTextLabel" type="RichTextLabel" parent="MarginContainer/MainMenuContainer"]
margin_top = 1641.0
margin_right = 980.0
margin_bottom = 1720.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]by [img=250]res://Assets/Images/wordart/ethan lew.png[/img], [img=250]res://Assets/Images/wordart/ugo ndupu.png[/img], and [img=300]res://Assets/Images/wordart/kyle whynott.png[/img][/center]"
text = "by , , and "
fit_content_height = true

[node name="ResizeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="resized" from="." to="." method="_on_MainMenu_resized"]
[connection signal="pressed" from="MarginContainer/MainMenuContainer/ButtonsHBox/StartButtonCard" to="." method="_on_StartButtonCard_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenuContainer/ButtonsHBox/OptionsButtonCard" to="." method="_on_OptionsButtonCard_pressed"]
